Revise README with project details and setup instructions
Updated project description and installation guide for EduTrip system.